--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,34 @@
+async-generator==1.10
+attrs==23.1.0
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+decorator==5.1.1
+exceptiongroup==1.1.1
+h11==0.14.0
+idna==3.4
 jsonpath-ng==1.5.3
 jsonschema==4.17.3
+keyboard==0.13.5
+MouseInfo==0.1.3
+numpy==1.23.5
+opencv-contrib-python==4.6.0.66
+opencv-python==4.6.0.66
+outcome==1.2.0
+ply==3.11
+PyAutoGUI==0.9.53
+pycparser==2.21
+PyDirectInput==1.0.4
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pynput==1.7.6
+pyperclip==1.8.2
+PyRect==0.2.0
+pyrsistent==0.19.3
+PyScreeze==0.1.28
+PySocks==1.7.1
+pytweening==1.0.4
+pywin32==305
 requests==2.31.0
 robotframework==6.1
 robotframework-jsonlibrary==0.5
@@ -7,4 +36,11 @@ robotframework-pythonlibcore==3.0.0
 robotframework-requests==0.9.5
 robotframework-selenium2library==3.0.0
 robotframework-seleniumlibrary==6.1.0
-
+selenium==4.9.0
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+trio==0.22.0
+trio-websocket==0.10.3
+urllib3==1.26.6
+wsproto==1.2.0
